kube/applications/jellyfin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
  name: jellyfin
  annotations:
    ignore-check.kube-linter.io/latest-tag: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/run-as-non-root: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/no-read-only-root-fs: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/unset-memory-requirements: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/unset-cpu-requirements: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/drop-net-raw-capability: >-
      FIXME: fix this one
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: jellyfin
      app.kubernetes.io/name: jellyfin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: jellyfin
        app.kubernetes.io/name: jellyfin
    spec:
      containers:
        - image: docker.io/linuxserver/jellyfin:10.10.6
          imagePullPolicy: IfNotPresent
          name: jellyfin
          ports:
            - containerPort: 8096
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data/media
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: media
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
