kube/applications/jellyfin/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
  name: jellyfin
spec:
  rules:
    - host: jellyfin.${DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: jellyfin
                port:
                  number: 8096
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - jellyfin.${DOMAIN}
